--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
+    "@prisma/adapter-pg": "^5.9.0",
+    "@prisma/client": "^5.9.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
@@ -18,6 +20,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.315.0",
     "next": "14.1.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
@@ -33,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.9.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
